--- a/.gitignore
+++ b/.gitignore
@@ -107,10 +107,10 @@ Thumbs.db
 # add your own entries here
 
 #!wp-content/mu-plugins/example-mu-plugin/
-!wp-content/mu-plugins/disable_extendify.php/
 
 #!wp-content/plugins/example-plugin/
 
+# !wp-content/plugins/nu-blocks/
 !wp-content/plugins/nu-gutenberg/
 
 # for the moment; were going to track a zip file that has all the plugins as we want them
@@ -120,7 +120,6 @@ Thumbs.db
 
 #!wp-content/themes/example-theme/
 !wp-content/themes/nu-start
-!wp-content/themes/nu-start-child
 
 
 # anything below here would have been added by an app like github desktop
